bugfix: header text center on mobile

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,17 +1,13 @@
 #head-navbar {
   width: 100%;
   display: inline-block;
-  overflow: hidden;
 }
 .nav>li {
+  position: relative;
   display: inline-block;
-  white-space: nowrap;
   padding-left: 15px;
 }
 ul.navbar-nav{
-  display: inline-block;
-}
-
-.container-fluid {
+  position: relative;
   display: inline-block;
 }
